# core

./: .gitignore  .sops.yaml  Containerfile  IDEAS.md  README.md  git-sops  renovate-local.json  renovate.json  update-all.sh
mikrotik/: .gitignore  backup.sh  configure.py  pyproject.toml  refresh.py  secure-zone.sh  synchronize.sh
mikrotik/configure/: dhcp.py  dns.py  dyndns.py  firewall.py  foxingress.py  haproxy.py  pdns.py  scripts.py  tftp.py  util.py  vrrp.py
mikrotik/files/dyndns/: dynamic-ip-update.rsc
mikrotik/files/pdns/: 10.in-addr.arpa.local.db  authority.db  base.db  e.b.3.6.b.c.4.f.c.2.d.f.ip6.arpa.local.db  foxden.network.local.db  google-ipv4.rpz  pdns.conf  recursor.conf  recursor.lua
mikrotik/files/tftp/: autoexec.ipxe  foxden_pxe.cer  foxden_pxe.crt  ipxe-aarch64-snponly.efi  ipxe-aarch64.efi  ipxe-arm64-snponly.efi  ipxe-arm64.efi  ipxe-x86_64-snponly.efi  ipxe-x86_64.efi  netboot.xyz-arm64-snponly.efi  netboot.xyz-snponly.efi  shimx64.efi  sign.sh  update.sh  wimboot-x86_64.efi
mikrotik/files/vrrp/: wan-online-adjust.rsc
mikrotik/refresh/: dhcp.py  dyndns.py  firewall.py  haproxy.py  pdns.py  scripts.py  util.py  vrrp.py
mikrotik/scripts/: firewall-rules-snout.rsc  firewall-rules-tail.rsc  firewall-update.rsc  global-init-onboot.rsc  reconfigure.rsc  wan-online-adjust.rsc
mikrotik/scripts/all/: container-autoheal.rsc  container-update.rsc  global-functions.rsc
mikrotik/scripts/internal/: container-create.rsc  container-update.rsc  create-containers.rsc
mikrotik/scripts/templates/: dynamic-ip-update.rsc  dyndns-update.rsc
(+359 files in other folders)
