[project]
name = "mikrotik"
version = "1.0.0"
description = "Helper scripts for Mikrotik setup"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "routeros-api>=0.21.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.4",
    "types-pyyaml>=6.0.12.20250915",
]
